--- a/src/styles/BannerView.css
+++ b/src/styles/BannerView.css
@@ -44,9 +44,9 @@
 	line-height: 1.5em;
 	font-family: "Playfair Display", serif;
 	letter-spacing: 2px;
-	padding-bottom: 24px;	
-	color: black;
+	padding-bottom: 24px;
 	font-weight: 700;
+	text-shadow: 0 5px 10px var(--bgWhite1);
 }
 .bannerContent a{
 	text-decoration: none;
@@ -116,20 +116,12 @@
 	color: var(--txtBlack1);
 	letter-spacing: 10px;
 }
-.section_container .next .bannerTitle .bannerContent .moto,
-.section_container .next .bannerTitle .heading h1:first-child {
-	filter: blur(10px);
-	opacity: 0;
-	animation: showText 0.5s .4s linear 1 forwards;
-}
+
 @keyframes showText {
 	to {
 		filter: blur(0);
 		opacity: 1;
 	}
-}
-.section_container .next .bannerTitle .bannerContent .moto{
-	animation-delay: 1.2s;
 }
 
 
@@ -158,7 +150,6 @@
 	height: 100%;
 	left: 0;
 	object-fit: cover;
-	filter: drop-shadow(0 0 0.06rem #0F1E73);
 	position: absolute;
 	border-radius: 10px;
 }
@@ -201,19 +192,19 @@
 	height: var(--thumb-height);
 	left: 65%;
 	bottom: calc(-25vh - 18px);
-	animation: showNext 0.6s linear 1 forwards;
+	animation: moveImg 0.6s linear 1 forwards;
 }
 
 .section_container .next .slidersContainer #thumbnail {
 	transform: translateX(calc(10vw + 1em));
 	animation: moveThumb 0.6s linear 1 forwards;
 }
-@keyframes showNext {
+@keyframes moveImg {
 	to {
-		width: 100%;
-		height: 100%;
 		left: 0;
 		bottom: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
 
