--- a/src/styles/Residential.css
+++ b/src/styles/Residential.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap');
 
 .topContainer {
-    height: 90vh;
+    height: 75vh;
     width: 100%;
     position: relative;
     padding-bottom: 24px;
@@ -57,15 +57,15 @@
     font-size: 10em;
     position: absolute;
     left: 60%;
-    top: 30%;
+    top: 20%;
     color: #0F1E73;
     width: fit-content;
 }
 .topContainer .paragraphs {
     position: sticky;
-    top: 55%;
+    top: 42%;
     left: 60%;
-    width: 350px;
+    width: 450px;
     text-align: start;
     font-size: 1.5em;
     font-family: "Gowun Batang", serif;
@@ -90,16 +90,21 @@
 }
 .gridContainer .classGrid {
     width: 90vw;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(45%, auto));
-    gap: 2em;
+    columns: 3 auto;
+    
+    gap: 1.5em;
 }
+
 .gridContainer .classGrid .imgItem{    
     cursor: pointer;
+    margin-bottom: 1em;
+    transition: all .2s ease-in;
 }
-.gridContainer .classGrid .imgItem img{
+.gridContainer .classGrid .imgItem:first-child{
+    grid-column: span 2;
+}
+.gridContainer .classGrid .imgItem img {
     width: 100%;
-    aspect-ratio: 16/9;
     object-fit: cover;
     border-radius: 2px;
     filter: drop-shadow(0 0 0.07rem #0F1E73);
@@ -129,6 +134,9 @@
 @media (hover: hover){
     .upButton:hover{
         transform: scale(1.2);
+    }
+    .gridContainer .classGrid .imgItem:hover{
+        transform: scale(1.02);
     }
 }
 @media screen and (max-width: 1000px) {
@@ -161,7 +169,7 @@
         width: 85vw;
         font-size: 1.2em;
         top: auto;
-        transform: translateY(50px);
+        transform: translateY(10px);
     }
     .topContainer .line {
         top: 80%;
